feat: add css-loader

--- a/src/orders/orders.html
+++ b/src/orders/orders.html
@@ -3,4 +3,5 @@
     <textarea name="orders" id="" cols="30" rows="10">3763757154513</textarea><br>
     <input type="submit">
 </form>
-<div></div>
+<hr>
+<div id="orders"></div>
