--- a/src/auth/auth.html
+++ b/src/auth/auth.html
@@ -1,4 +1,4 @@
-<form action="" method="POST" id="auth">
-    <input type="password" />
-    <input type="submit" />
+<form action="" method="POST" id="auth" class="hidden">
+    <input type="password" name="password" />
+    <input type="submit" value="Refresh Token" />
 </form>
