--- a/src/orders/orders.html
+++ b/src/orders/orders.html
@@ -1,6 +1,6 @@
 <hr>
 <form action="" method="POST">
-    <textarea name="orders" id="" cols="30" rows="10">3763757154513</textarea><br>
+    <textarea name="orders" id="" cols="30" rows="10" placeholder="Write here the orders list.">3763757154513</textarea><br>
     <input type="submit">
 </form>
 <hr>
